--- a/homework.ipynb
+++ b/homework.ipynb
@@ -96,7 +96,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Problem 1 (3 points)\n",
+        "### Problem 1\n",
         "\n",
         "Set `p1` to the sum of the values in `q1`."
       ]
@@ -154,7 +154,7 @@
         "id": "8F17H4qQTEW8"
       },
       "source": [
-        "### Problem 2 (3 points)\n",
+        "### Problem 2\n",
         "\n",
         "Write a function `p2` taking an array as input, and returning an array of the same shape with each value squared."
       ]
@@ -243,7 +243,7 @@
         "id": "BQL1Gh8TTJMQ"
       },
       "source": [
-        "### Problem 3 (3 points)\n",
+        "### Problem 3\n",
         "\n",
         "Write a function `p3` taking in input $n$, an integer, and creating an array whose contents are $0^2, 1^2, 2^2, \\ldots, (n-1)^2$."
       ]
@@ -302,7 +302,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Problem 4 (3 points)\n",
+        "### Problem 4\n",
         "\n",
         "Write a function `p4` that takes in an array and returns `True` if it uses more than 1,000,000 bytes and `False` otherwise."
       ]
@@ -359,7 +359,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Problem 5 (3 points)\n",
+        "### Problem 5\n",
         "\n",
         "For charts based on known functions, it is often convenient to generate a variable containing evenly spaced x values to plot.\n",
         "Set `p5` to be 100 evenly spaced values starting at zero and ending at ten."
@@ -391,7 +391,7 @@
         "id": "9lmv_gdvTd4_"
       },
       "source": [
-        "### Problem 6 (4 points)\n",
+        "### Problem 6\n",
         "\n",
         "Write a function `p6` that takes in two arrays, one with shape $n \\times k$ and one with shape $k$, multiplies them together element-wise using broadcasting, then sums them along the second axis to get an array of shape $n$. Return that array.\n",
         "\n",
@@ -511,7 +511,7 @@
         "id": "0TMi-vnqWtGl"
       },
       "source": [
-        "### Problem 7 (4 points)\n",
+        "### Problem 7\n",
         "\n",
         "Write a function `p7` that takes in a 1-dimensional array of values $z_i$, and returns an array composed of $\\frac{e^{z_i}}{\\sum e^{z_i}}$.\n",
         "The output array shape should be the same as the input array shape.\n",
@@ -584,7 +584,7 @@
         "id": "kZY57V-IY_Bu"
       },
       "source": [
-        "### Problem 8 (4 points)\n",
+        "### Problem 8\n",
         "\n",
         "Write a function `p8` that takes in a 2-dimensional array and repeats the softmax calculation of problem 7 on a row-by-row basis.\n",
         "That is, the output should be the same as if you split the input array into rows, applied the softmax formula to each row individually, and then recombined the rows again.\n",
@@ -633,7 +633,7 @@
         "id": "Gm1g8wXhZMO-"
       },
       "source": [
-        "### Problem 9 (4 points)\n",
+        "### Problem 9\n",
         "\n",
         "Write a function `p9` that takes in the name of a TSV file, reads an array of numbers from a file, and returns a 1-dimensional array with the average value from each column. You may assume that the file does not have a header."
       ]
@@ -667,7 +667,7 @@
         "id": "FyCzzy7sZYLs"
       },
       "source": [
-        "### Problem 10 (4 points)\n",
+        "### Problem 10\n",
         "\n",
         "Write a function that takes in a NumPy array of any type, and returns an array with the same values with type float32. If the input array already has type float32, return the original array.\n"
       ]
@@ -772,7 +772,7 @@
         "id": "0amuOt-IZgIL"
       },
       "source": [
-        "### Problem 11 (4 points)\n",
+        "### Problem 11\n",
         "\n",
         "Write a function `p11` that takes in a 2-dimensional array and returns an array with the cumulative mean calculated along the second axis.\n",
         "So the first row of the output shows the cumulative mean of the first row of the input.\n"
@@ -825,7 +825,7 @@
         "id": "C7gMpdohZrpA"
       },
       "source": [
-        "### Problem 12 (4 points)\n",
+        "### Problem 12\n",
         "\n",
         "Write a function `p12` taking in a 2-dimensional array and returning `True` if each row of the array sums to one (test if it is between 0.999 and 1.001 to account for numerical inaccuracy) or `False` otherwise.\n"
       ]
@@ -868,7 +868,7 @@
         "id": "ckbPTmWGZxLu"
       },
       "source": [
-        "### Problem 13 (4 points)\n",
+        "### Problem 13\n",
         "\n",
         "Write a function `p13` taking an $n \\times k$ array and returns a tuple of arrays with the minimum, median, and maximum values of each row. To be clear, the function should return a tuple of three 1-dimensional arrays, each of length $n$.\n"
       ]
@@ -900,7 +900,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Problem 14 (4 points)\n",
+        "### Problem 14\n",
         "\n",
         "Write a function `p14` that takes in a two dimensional array and returns the highest row sum."
       ]
@@ -932,7 +932,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Problem 15 (4 points)\n",
+        "### Problem 15\n",
         "\n",
         "Write a function `p15` that takes in a number as input, and returns a string like \"The answer is 42.34 elephants.\" where the number in the returned string is the input number with two digits after the decimal point."
       ]
@@ -982,7 +982,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Problem 16 (4 points)\n",
+        "### Problem 16\n",
         "\n",
         "Using NumPy, you can use functions such as `np.zeros`, `np.ones`, or `np.full` to create an array where all the contained values are initialized to the same number.\n",
         "\n",
@@ -1049,7 +1049,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Problem 17 (4 points)\n",
+        "### Problem 17\n",
         "\n",
         "[Kakuro](https://en.wikipedia.org/wiki/Kakuro) is a logic puzzle where the goal is to fill in numbers so that the rows and columns add up to specified numbers.\n",
         "Write a function `p17` that checks if a given 2 dimensional array is a solution for the given row and column sum constraints and returns `True` if the are satisfied and `False` otherwise.\n",
@@ -1095,7 +1095,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Problem 18 (4 points)\n",
+        "### Problem 18\n",
         "\n",
         "The function `p18` below is supposed to compute the dot product between two 1-dimensional arrays given as input.\n",
         "The dot product is supposed to be calculated by multiplying corresponding values between the two arrays, and summing up those products.\n",
@@ -1130,7 +1130,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Problem 19 (4 points)\n",
+        "### Problem 19\n",
         "\n",
         "Write a function `p19` that takes in a list of arrays as input, and returns the largest one (counting elements).\n",
         "If there is more than one with the maximum number of elements, the tie may be broken arbitrarily."
@@ -1161,7 +1161,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Problem 20 (4 points)\n",
+        "### Problem 20\n",
         "\n",
         "Write a function `p20` that takes in an $n \\times 1$ array and an $1 \\times m$ array as input, and returns `True` if any sum of a value in the first array with a value in the second array is 100 and `False` otherwise."
       ]
